--- a/templates/linealreg.html
+++ b/templates/linealreg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FINAL</title>
+  <title>Ferengai</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -90,9 +90,10 @@ body {
 </div>
 
 <div class="main">
-
+    <div class="container-fluid">
+        <h1> Lineal Regression </h1>
+    </div>
 </div>
-  <h1> this is linear Regression </h1>
 
 
   <!-- Our JS -->
