--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ position: fixed;
 z-index: 1;
 top: 0;
 left: 0;
-background-color: #111;
+background-color:white;
 overflow-x: hidden;
 padding-top: 20px;
 }
@@ -17,13 +17,14 @@ padding-top: 20px;
 .sidenav a {
 padding: 6px 8px 6px 16px;
 text-decoration: none;
-font-size: 25px;
+font-size: 20px;
+font-weight: bold;
 color: #818181;
 display: block;
 }
 
 .sidenav a:hover {
-color: #f1f1f1;
+color: black;
 }
 
 .main {
