--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,7 +9,7 @@ position: fixed;
 z-index: 1;
 top: 0;
 left: 0;
-background-color:white;
+background-color: whitesmoke;
 overflow-x: hidden;
 padding-top: 20px;
 }
@@ -18,7 +18,7 @@ padding-top: 20px;
 padding: 6px 8px 6px 16px;
 text-decoration: none;
 font-size: 20px;
-font-weight: bold;
+font-weight: normal;
 color: #818181;
 display: block;
 }
