images for html and other edits

--- a/templates/data.html
+++ b/templates/data.html
@@ -53,6 +53,13 @@
 <div class="main">
     <div class="container-fluid">
         <h1>Data </h1>
+        <h2>Data Collection</h2>
+        <p> Stock market data since 1980s or 1990s (CSV, API, whatever) for the big Indexes (Dow Jones, and S&P 500). Initially we will be using d daily data, but hourly can be something we use later.
+        </p>
+        <h2>Data Scaling</h2>
+
+        <p>This data must then be compressed into a format that the neural network can process. This means all data should be turned into some number between 0 to 1. For example, if we are look at data from 9/3/2015 and the price was 100, we will find the maximum and minimum price from the last 365 days to determine the range of the scale.
+        </p>
     </div>
 </div>
 
