--- a/templates/data.html
+++ b/templates/data.html
@@ -40,18 +40,26 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
+
 </head>
 <body>
 
 <div class="sidenav">
-    <a href="index.html">Final Project</a>
-    <a href="data.html">Data</a>
-    <a href="linealreg.html">Linear Regression</a>
-    <a href="predictreg.html">Prediction Results</a>
+        <a href="/">Final Project</a>
+        <a href="data">Data</a>
+        <a href="linealreg">Linear Regression</a>
+        <a href="predictreg">Prediction Results</a>
 </div>
 
 <div class="main">
-    <div class="container-fluid">
+    <div class="container-fluid ">
+        <div>
+                <img src="../static/images/datacollectionflat.jpg" class="container float-right" alt="Responsive image" 
+                width=100%;
+                height= 200px; background-repeat=no-repeat;
+                background-size:cover;>
+        </div>
         <h1>Data </h1>
         <h2>Data Collection</h2>
         <p> Stock market data since 1980s or 1990s (CSV, API, whatever) for the big Indexes (Dow Jones, and S&P 500). Initially we will be using d daily data, but hourly can be something we use later.
