--- a/templates/index.html
+++ b/templates/index.html
@@ -43,12 +43,12 @@
 </head>
 <body>
 
-  <div class="sidenav">
-    <a href="index.html">Final Project</a>
-    <a href="data.html">Data</a>
-    <a href="linealreg.html">Linear Regression</a>
-    <a href="predictreg.html">Prediction Results</a>
-  </div>
+<div class="sidenav">
+    <a href="/">Final Project</a>
+    <a href="data">Data</a>
+    <a href="linealreg">Linear Regression</a>
+    <a href="predictreg">Prediction Results</a>
+</div>
 
   <div class="container-fluid">
     <div>
