--- a/templates/predictreg.html
+++ b/templates/predictreg.html
@@ -44,10 +44,10 @@
 <body>
 
 <div class="sidenav">
-  <a href="index.html">Final Project</a>
-  <a href="data.html">Data</a>
-  <a href="linealreg.html">Linear Regression</a>
-  <a href="predictreg.html">Prediction Results</a>
+        <a href="/">Final Project</a>
+        <a href="data">Data</a>
+        <a href="linealreg">Linear Regression</a>
+        <a href="predictreg">Prediction Results</a>
 </div>
 
 <div class="main">
