--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,8 @@
 
   <div class="container-fluid">
     <div>
-        <img src="../static/images/touchscreen.jpg" class="img-fluid float-right" alt="Responsive image">
+        <!--<img src="../static/images/touchscreen.jpg" class="img-fluid float-right" alt="Responsive image">-->
+        <img src="../static/images/dataprocess.jpg" class="img-fluid float-right" alt="Responsive image">
     </div>
     <div class="main">
       <h1> this is our presentation </h1>
@@ -67,7 +68,7 @@
  
 
 
-  <!-- Our JS -->
+  <!-- Our JS 
   <script type="text/javascript" src="static/js/index.js"></script>
 
 
