--- a/templates/predictreg.html
+++ b/templates/predictreg.html
@@ -52,7 +52,9 @@
 
 <div class="main">
     <div class ="container-fluid">
- 
+        <div>
+            <img src="../static/images/linealreg.jpg" class="img-fluid float-right" alt="Responsive image">
+        </div>
     </div>
 
 </div>
