--- a/templates/linealreg.html
+++ b/templates/linealreg.html
@@ -52,6 +52,9 @@
 
 <div class="main">
     <div class="container-fluid">
+    <div>
+            <img src="../static/images/neuralnetworks.jpg" class="img-fluid float-right" alt="Responsive image">
+    </div>
         <h1> Lineal Regression </h1>
     </div>
 </div>
