--- a/templates/predictreg.html
+++ b/templates/predictreg.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ferengai</title>
+  <title>FerengAI</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -55,6 +55,7 @@
         <div>
             <img src="../static/images/linealreg.jpg" class="img-fluid float-right" alt="Responsive image">
         </div>
+        <h1>The Neural Net</h1>
     </div>
 
 </div>
