changed layoutof HTML to templates

--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>FerengAI</title>
 
   <!-- Bootstrap CSS -->
@@ -15,25 +13,9 @@
     integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-
-  <!-- Plotly -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-</head>
-
-  <!-- Google Charts -->
-  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <!--D3 cdn-->
   <script src="https://d3js.org/d3.v5.js"></script>
 
   <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="static/css/style.css">
-  <script type="text/javascript" src="static/js/nn.js"></script>
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
-
-<body>
-	<div id="graph"></div>
-
-
-</body>
-</html>
