--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,15 +3,15 @@ font-family: "Lato", sans-serif;
 }
 
 .sidenav {
-height: 100%;
+height: 50em;
 width: 160px;
-position: fixed;
 z-index: 1;
 top: 0;
 left: 0;
 background-color: whitesmoke;
 overflow-x: hidden;
 padding-top: 20px;
+float:left;
 }
 
 .sidenav a {
