simplified API routes

--- a/templates/components/sidenav.html
+++ b/templates/components/sidenav.html
@@ -2,5 +2,5 @@
         <a href="/">Final Project</a>
         <a href="data">Data</a>
         <a href="linealreg">Linear Regression</a>
-        <a href="predictreg">Prediction Results</a>
+        <a href="predictreg">Neural Net Results</a>
 </div>
