--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,7 +29,7 @@ color: black;
 
 .main {
 margin-left: 160px; /* Same as the width of the sidenav */
-font-size: 28px; /* Increased text to enable scrolling */
+font-size: 1.2em; /* Increased text to enable scrolling */
 padding: 0px 10px;
 }
 
