--- a/templates/components/head.html
+++ b/templates/components/head.html
@@ -16,6 +16,10 @@
   <!--D3 cdn-->
   <script src="https://d3js.org/d3.v5.js"></script>
 
+  <!-- Plotly -->
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://d3js.org/d3.v5.js"></script>
+
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="../static/css/style.css">
 </head>
