--- a/templates/components/nn.html
+++ b/templates/components/nn.html
@@ -1,6 +1,1 @@
-<!-- Plotly -->
-<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-<script src="https://d3js.org/d3.v5.js"></script>
-<script type="text/javascript" src="static/js/nn.js"></script>
-
-<div id="graph"></div>
+<div id="graphNN"></div>
