--- a/templates/components/nnTable.html
+++ b/templates/components/nnTable.html
@@ -26,5 +26,9 @@
       <th scope="row">Number of Neurons per Layer</th>
       <td>20</td>
     </tr>
+    <tr>
+      <th scope="row">Epochs</th>
+      <td>50</td>
+    </tr>
   </tbody>
 </table>
