--- a/templates/components/sidenav.html
+++ b/templates/components/sidenav.html
@@ -1,6 +1,7 @@
 <div class="sidenav">
         <a href="/">Final Project</a>
         <a href="data">Data</a>
-        <a href="linealreg">Linear Regression</a>
+        <a href="three">Comparison</a>
         <a href="predictreg">Neural Net Results</a>
+        <a href="limitless">.</a>
 </div>
