--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,12 @@
 {% include 'components/sidenav.html' %}
 
   <div class="container-fluid">
-    <div>
-        <!--<img src="../static/images/touchscreen.jpg" class="img-fluid float-right" alt="Responsive image">-->
-        <img src="../static/images/dataprocess.jpg" class="img-fluid float-right" alt="Responsive image">
-    </div>
     <div class="main">
-      <h1> this is our presentation </h1>
-      <h2>FInal Project </h2>
-      <p>Create a model that will predict stock behavior</p>
-      <p>Scroll down the page to see the result.</p>
-
-
+      <h1> FERENGAI &trade; </h1>
+      <h2>Rule of acquisition #9 </h2>
+      <p>"Opportunity plus instinct equals profit."</p>
+      <p>We are going to use neural nets to predict the stock market.</p>
+      <img src="../static/images/ferengi.png">
     </div>
   </div>
 
