--- a/templates/predictreg.html
+++ b/templates/predictreg.html
@@ -9,7 +9,7 @@
 
   <div class="main">
       <div class ="container-fluid">
-          <h1>The Neural Net</h1>
+          <h1>The Neural Net (Backpropagation)</h1>
 
           {% include 'components/nnTable.html' %}
 
@@ -19,7 +19,7 @@
       </div>
   </div>
   <!-- Our JS -->
-  <script type="text/javascript" src="static/js/index.js"></script>
+  <script type="text/javascript" src="static/js/nn.js"></script>
 
 </body>
 </html>
