--- a/templates/data.html
+++ b/templates/data.html
@@ -13,6 +13,7 @@
     <table class="table table-hover">
       <thead>
         <tr>
+            <th scope="col">Date</th>
             <th scope="col">Adj Close</th>
             <th scope="col">Close</th>
             <th scope="col">High</th>
